# screenmirror

./: .gitignore  ISSUES.md  README.md  package_release.sh  screenmirror_audit_followup.md  screenmirror_issues_report.md  setup_udev.sh
.github/workflows/: desktop.yml  mobile.yml  obs_plugin.yml  release.yml
desktopApp/: desktopAppPrompt.md  electrobun.config.ts  package.json  tailwind.config.js  test_crash.js  tsconfig.json  vite.config.ts
desktopApp/mirror_backend/: Cargo.toml
desktopApp/mirror_backend/src/: audio.rs  audio_engine.rs  decoder.rs  demuxer.rs  lib.rs  metrics.rs  obs_feed.rs  receiver.rs  renderer.rs  shared_mem.rs  shm_win.rs  video_processing.rs
desktopApp/obs_plugin/: install_plugin.sh  mirror_source.c
desktopApp/obs_plugin/simde/x86/: sse2.h
desktopApp/scripts/: bundle.sh
desktopApp/src/bun/: index.ts
desktopApp/src/components/ui/: LogoIcon.tsx
desktopApp/src/features/dashboard/: Dashboard.tsx  LogItem.tsx
desktopApp/src/features/loader/: LoaderScreen.tsx
desktopApp/src/mainview/: App.tsx  index.css  main.tsx
desktopApp/src/types/: index.ts
desktopApp/views/mainview/: index.html
mobileApp/: README.md  mobileAppPrompt.md  pubspec.yaml
mobileApp/android/app/: build.gradle.kts
mobileApp/ios/Runner/: Info.plist
mobileApp/ios/Runner.xcodeproj/: project.pbxproj
mobileApp/lib/: main.dart
mobileApp/linux/: CMakeLists.txt
mobileApp/linux/runner/: my_application.cc
mobileApp/macos/Runner.xcodeproj/: project.pbxproj
mobileApp/rust/: Cargo.toml
mobileApp/rust/src/: api.rs  audio_capture.rs  frb_generated.rs  jni_bridge.rs  lib.rs  muxer.rs  usb_loop.rs
mobileApp/test/: widget_test.dart
mobileApp/web/: index.html  manifest.json
mobileApp/windows/: CMakeLists.txt
mobileApp/windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
