[package]
name = "mirror_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusb = "0.9"
ffmpeg-next = "7.1"
concurrent-queue = "2.5"
shared_memory = "0.12"
anyhow = "1.0"
libc = "0.2"
once_cell = "1.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
