[package]
name = "mirror_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusb = "0.9"
ffmpeg-next = { version = "7.1", features = ["software-scaling", "format"] }
concurrent-queue = "2.5"
shared_memory = "0.12"
anyhow = "1.0"
libc = "0.2"
once_cell = "1.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
sdl2 = { version = "0.38.0", features = ["bundled"] }
cpal = "0.17.3"
ringbuf = "0.4.8"
rubato = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
