[package]
name = "rust_lib_stream_mobile_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rusb = { version = "0.9", features = ["vendored"] }
anyhow = "1.0"
libc = "0.2"
once_cell = "1.19"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
concurrent-queue = "2.5"
chrono = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
ndk-sys = "0.5"
oboe = { version = "0.6", features = ["shared-stdcxx"] }
